--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,11 @@ envlist =
    py37
 
 [testenv]
-deps =
+
+deps = -r{toxinidir}/requirements.txt
    pytest
    pytest-randomly
 commands =
     pytest --randomly-seed=1
+setenv =
+    PYTHONPATH = {toxinidir}
